# vulnsamurai_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.bat  run.ps1  run.sh  supervisord.conf
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  scans.rs  vulns.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  scan.rs  user.rs  vuln.rs
frontend/: server.js
mongo-init/: 01_indexes.js
nginx/: nginx.conf
